When moving past a left-hand scrollbar, don't jump way outside the content box https://bugs.webkit.org/show_bug.cgi?id=279324 rdar://136040116

Reviewed by Alan Baradlay.

Merge (non-inline fix): https://source.chromium.org/chromium/chromium/src/+/d457f863f78941ed376b463ee39476b1a1852797
& https://chromium.googlesource.com/chromium/src.git/+/49858cc9147612da1e54a673147e8020c5d7b9f9

This patch fixes edge cases where scrollWidth can be messed up by left-hand
scroller leading to be outside of content box in case of a scrollbar being
wider than its containing block.

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::RenderBlockFlow::determineLogicalLeftPositionForChild):
* LayoutTests/fast/scrolling/content-box-smaller-than-scrollbar.html:
* LayoutTests/fast/table/cell-percent-padding-expected.txt:
* LayoutTests/fast/table/cell-percent-padding.html:
* LayoutTests/fast/scrolling/content-box-smaller-than-scrollbar-expected.txt:
* LayoutTests/platform/ios/TestExpectations: Add Platform Specific Expectation due to RTL scrollbars

Canonical link: https://commits.webkit.org/297945@main